--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   uuid: ^4.3.3
   amity_sdk_api: ^0.0.3
   device_info_plus: ^10.1.2
+  win32: ^5.5.4
 # Add the lib from the pub dev before deploying
   # amity_api:
   #   path: ../amity_api
